<resources>
    <string name="app_name">自律鸡</string>
    <string name="no_data_error_long">这里空空如也</string>
    <string name="net_error">亲，你的手机网络不太顺畅喔</string>
    <string name="share_donot_install_app">没有安装相应的应用，无法分享</string>
    <string name="login_donot_install_app">您未安装微信，请使用其它登录方式</string>
    <string name="bind_donot_install_app">没有安装相应的应用，无法绑定</string>

    <string name="net_error_long">网络请求失败</string>
    <string name="reload">重新加载</string>
    <string name="code_name">作者:</string>
    <string name="code_type">类型:</string>
    <string name="code_type_desc">类型描述:</string>
    <string name="code_content">内容:</string>
    <string name="code_imp">是否重要:</string>
    <string name="code_time">创建时间:</string>
    <string name="very_work">每日工作:</string>
    <string name="very_card">每日打卡:</string>
    <string name="my_habit">我的习惯</string>
    <string name="my_note">我的笔记</string>
    <string name="note_detail">笔记详情</string>
    <string name="login_string">自律鸡</string>
    <string name="hint_login_account">请输入帐号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="longin_name">登陆</string>
    <string name="register_name">注册</string>
    <string name="note_hint_title_samll">请输入小节标题,没有可不输</string>
    <string name="note_hint_content_big">请输入小节文本，必输入！</string>
    <string name="account_pwd_error">账号密码起码要6位以上</string>
    <string name="submit">提交</string>
    <string name="note_my">我的记录</string>
    <string name="add_note_list">添加笔记</string>
    <string name="title_lenght_error">标题不能多余200个字</string>
    <string name="content_lenght_error">内容不能大于一千字</string>
    <string name="data_transfs_error">数据传输问题，最好退出重进</string>
    <string name="card_setting" >打卡设置</string>
    <string name="mytool" >记账设置</string>
    <string name="add_card" >+ 添加一个自定义习惯卡片</string>
    <string name="stock_reconrd">"股票记录"</string>
    <string name="principal_unchanged">"是否保持本金不变"</string>
    <string name="roll_out">转出金额</string>
    <string name="experience_text">"人生经验惨如狗"</string>
    <string name="add_interest_card">"add interest card"</string>
    <string name="sample_sub">"点击更改,变成真实的兴趣"</string>
    <string name="is_delete_title">确定删除此卡片?</string>
    <string name="cacel">取消</string>
    <string name="sure" >确定</string>
    <string name="prompt">提示</string>
    <string name="roll_in">转入金额</string>
    <string name="remark">备注</string>
    <string name="lend_rebt">借还账本</string>
    <string name="input_name">姓名</string>
    <string name="input_money">金额</string>
    <string name="borrow_money">借钱</string>
    <string name="debt_money">欠钱</string>
    <string name="clock_in">自律打卡</string>
    <string name="my_account">我的账户</string>
    <string name="daily_notes">每日便签，点击输入</string>
</resources>
