<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/include_toolbar"/>

    <ImageView
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_80"
        android:src="@drawable/zilvji_logo"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sp_24"
       android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/text_000"
        android:text="@string/login_string"/>
    <EditText
        android:id="@+id/et_accout"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_30"
        android:hint="@string/hint_login_account"
        android:gravity="center"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_commont_stroke_rec_bg"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_30"
        android:hint="@string/hint_login_pwd"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_commont_stroke_rec_bg"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/bt_commont_stroke_cor_bg"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/longin_name"/>
</LinearLayout>
