<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_margin="@dimen/dp_8"
        android:visibility="gone"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_24"
            android:text="拍照"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="关键字:kotlin"
            android:textSize="@dimen/sp_24"
           android:onClick="onClickText"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="语音输入"
            android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:maxLines="200"
        android:background="@drawable/bt_commont_stroke_rec_bg"
        android:hint="@string/note_hint_title_samll" />



    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_weight="1"
        android:background="@drawable/bt_commont_stroke_rec_bg"
        android:gravity="top"
        android:padding="@dimen/dp_10"
        android:inputType="textMultiLine"
        android:layout_margin="@dimen/dp_10"
        android:maxLength="1000"
        android:hint="@string/note_hint_content_big" />

    <TextView
        android:id="@+id/tv_sub"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bt_commont_stroke_cor_bg"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_000"
        android:text="@string/submit" />
</LinearLayout>
